<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundGrey"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/characterPhoto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:contentDescription="@string/characterName"
        android:src="@drawable/default_picture" />

    <TextView
        android:id="@+id/characterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Rick Sanchez"
        android:textColor="@color/textWhite"
        android:textSize="@dimen/titleSize"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/characterName"
        android:textColor="@color/textGrey"
        android:textSize="@dimen/descriptionSize" />

    <TextView
        android:id="@+id/characterStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="Alive"
        android:textColor="@color/textWhite"
        android:textSize="@dimen/titleSize"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textColor="@color/textGrey"
        android:textSize="@dimen/descriptionSize" />

    <TextView
        android:id="@+id/characterSpecies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="Human"
        android:textColor="@color/textWhite"
        android:textSize="@dimen/titleSize"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/species"
        android:textColor="@color/textGrey"
        android:textSize="@dimen/descriptionSize" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="Male"
        android:textColor="@color/textWhite"
        android:textSize="@dimen/titleSize"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textColor="@color/textGrey"
        android:textSize="@dimen/descriptionSize" />

    <TextView
        android:id="@+id/characterOrigin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="Earth (C-137)"
        android:textColor="@color/textWhite"
        android:textSize="@dimen/titleSize"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/origin"
        android:textColor="@color/textGrey"
        android:textSize="@dimen/descriptionSize" />

    <TextView
        android:id="@+id/characterLastLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="Citadel of Ricks"
        android:textColor="@color/textWhite"
        android:textSize="@dimen/titleSize"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lastLocation"
        android:textColor="@color/textGrey"
        android:textSize="@dimen/descriptionSize" />



</LinearLayout>

