<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/episodeName"
                android:textColor="@color/textGrey"
                android:textSize="@dimen/titleSize" />

            <TextView
                android:id="@+id/episodeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Pilot"
                android:textColor="@color/textWhite"
                android:textSize="@dimen/titleSize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/airDate"
                android:textColor="@color/textGrey"
                android:textSize="@dimen/titleSize" />

            <TextView
                android:id="@+id/airDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="December 2, 2013"
                android:textColor="@color/textWhite"
                android:textSize="@dimen/titleSize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/episode"
                android:textColor="@color/textGrey"
                android:textSize="@dimen/titleSize" />

            <TextView
                android:id="@+id/episodeNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="S01E01"
                android:textColor="@color/textWhite"
                android:textSize="@dimen/titleSize" />

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>