<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/locationName"
                android:textColor="@color/textGrey"
                android:textSize="@dimen/titleSize" />

            <TextView
                android:id="@+id/locationName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Citadel of Ricks"
                android:textColor="@color/textWhite"
                android:textSize="@dimen/titleSize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/typeLocation"
                android:textColor="@color/textGrey"
                android:textSize="@dimen/titleSize" />

            <TextView
                android:id="@+id/typeLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Space station"
                android:textColor="@color/textWhite"
                android:textSize="@dimen/titleSize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dimension"
                android:textColor="@color/textGrey"
                android:textSize="@dimen/titleSize" />

            <TextView
                android:id="@+id/dimension"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="unknown"
                android:textColor="@color/textWhite"
                android:textSize="@dimen/titleSize" />

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>